force-app/main/default/objects/Album__c/Album__c.object-meta.xml
<CustomObject>
    <description>An object to store artist&#39;s albums or EPs</description>
    <label>Album</label>
    <nameField>
        <label>Album Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Albums</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>