force-app/main/default/objects/Album__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <label>Artist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Albums</relationshipLabel>
    <relationshipName>Albums</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>