force-app/main/default/objects/Album__c/fields/Cover__c.field-meta.xml
<CustomField>
    <fullName>Cover__c</fullName>
    <label>Cover</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>