force-app/main/default/objects/Album__c/fields/Number_of_songs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_songs__c</fullName>
    <description>Calculates the number of songs associated with this album.</description>
    <label>Number of songs</label>
    <summaryForeignKey>Song__c.Album__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>